[gd_scene load_steps=13 format=3 uid="uid://blaqahyclcc3h"]

[ext_resource type="Script" uid="uid://6p0l8g2qfmmy" path="res://scenes/settings.gd" id="1_6wm04"]
[ext_resource type="FontFile" uid="uid://cgignmw1c7ehh" path="res://fonts/Helvetica-Bold.ttf" id="2_f4mfi"]
[ext_resource type="FontFile" uid="uid://c4bq2x43il65b" path="res://fonts/Helvetica.ttf" id="3_es4n0"]

[sub_resource type="Gradient" id="Gradient_81wt4"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6civk"]
gradient = SubResource("Gradient_81wt4")
width = 6
height = 20

[sub_resource type="StyleBoxLine" id="StyleBoxLine_7af2g"]
color = Color(0.964706, 0.054902, 0.313726, 1)
thickness = 20

[sub_resource type="StyleBoxLine" id="StyleBoxLine_81wt4"]
color = Color(0.148349, 0.000553296, 0.021177, 1)
thickness = 20

[sub_resource type="Theme" id="Theme_blk4q"]
HSlider/icons/grabber = SubResource("GradientTexture2D_6civk")
HSlider/icons/grabber_highlight = SubResource("GradientTexture2D_6civk")
HSlider/styles/grabber_area = SubResource("StyleBoxLine_7af2g")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxLine_7af2g")
HSlider/styles/slider = SubResource("StyleBoxLine_81wt4")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4rr2b"]

[sub_resource type="Gradient" id="Gradient_kcc3o"]
interpolation_mode = 1
interpolation_color_space = 1
offsets = PackedFloat32Array(0, 0.053)
colors = PackedColorArray(0, 0, 0, 0, 0.968627, 0.054902, 0.313726, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_kcc3o"]
gradient = SubResource("Gradient_kcc3o")
width = 1701

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ah8jo"]
texture = SubResource("GradientTexture1D_kcc3o")
expand_margin_right = 2048.0

[node name="Settings" type="Control" node_paths=PackedStringArray("MASTERAUDIO", "SFXAUDIO", "MUSICAUDIO", "FULLSCREEN")]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 486.0
offset_top = 55.0
offset_right = 486.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6wm04")
MASTERAUDIO = NodePath("VBoxContainer/Audio/VBoxContainer/HSlider")
SFXAUDIO = NodePath("VBoxContainer/Audio/VBoxContainer2/HSlider")
MUSICAUDIO = NodePath("VBoxContainer/Audio/VBoxContainer3/HSlider")
FULLSCREEN = NodePath("VBoxContainer/Video/CheckBox")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_right = -25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 21

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_f4mfi")
theme_override_font_sizes/font_size = 55
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Video" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="V" type="Label" parent="VBoxContainer/Video"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.054902, 0.313726, 1)
theme_override_fonts/font = ExtResource("2_f4mfi")
theme_override_font_sizes/font_size = 36
text = "Video"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/Video"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_es4n0")
theme_override_font_sizes/font_size = 29
text = "Fullscreen"

[node name="Audio" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="A" type="Label" parent="VBoxContainer/Audio"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.054902, 0.313726, 1)
theme_override_fonts/font = ExtResource("2_f4mfi")
theme_override_font_sizes/font_size = 36
text = "Audio"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Audio"]
layout_mode = 2
theme_override_constants/separation = 19

[node name="Master" type="Label" parent="VBoxContainer/Audio/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_es4n0")
theme_override_font_sizes/font_size = 24
text = "Master Audio"
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer/Audio/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_blk4q")
value = 13.0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/Audio"]
layout_mode = 2
theme_override_constants/separation = 19

[node name="SFX" type="Label" parent="VBoxContainer/Audio/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_es4n0")
theme_override_font_sizes/font_size = 24
text = "Sound Effects"
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer/Audio/VBoxContainer2"]
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_blk4q")
value = 13.0

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/Audio"]
layout_mode = 2
theme_override_constants/separation = 19

[node name="Music" type="Label" parent="VBoxContainer/Audio/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_es4n0")
theme_override_font_sizes/font_size = 24
text = "Music"
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer/Audio/VBoxContainer3"]
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_blk4q")
value = 13.0

[node name="Extras" type="VBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="E" type="Label" parent="VBoxContainer/Extras"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.054902, 0.313726, 1)
theme_override_fonts/font = ExtResource("2_f4mfi")
theme_override_font_sizes/font_size = 36
text = "Extras"
horizontal_alignment = 1
vertical_alignment = 1

[node name="E2" type="Label" parent="VBoxContainer/Extras"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_es4n0")
theme_override_font_sizes/font_size = 24
text = "Currently Unavailable"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Return" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_f4mfi")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_4rr2b")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4rr2b")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4rr2b")
theme_override_styles/hover = SubResource("StyleBoxTexture_ah8jo")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4rr2b")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4rr2b")
text = "RETURN"

[connection signal="toggled" from="VBoxContainer/Video/CheckBox" to="." method="_on_fullscreen_check_box_toggled"]
[connection signal="value_changed" from="VBoxContainer/Audio/VBoxContainer/HSlider" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Audio/VBoxContainer2/HSlider" to="." method="_on_sfx_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Audio/VBoxContainer3/HSlider" to="." method="_on_music_value_changed"]
[connection signal="pressed" from="VBoxContainer/Return" to="." method="_on_return_pressed"]
